# phtml

./: .gitignore  README.md  changelog.md  deleteme.html  deleteme2.html  deleteme_this_time.html  html_classes.py  pyproject.toml  setup.py  testdoc_deleteme.html  testdoc_deleteme2.css
phtml/: __init__.py  document.py  find_element.py  html_reader.py  tag_mapping.py
phtml/classes/: __init__.py  base.py  blockquote.py  body.py  button.py  canvas.py  comment.py  datalist.py  div.py  fieldset.py  form.py  head.py  header.py  html.py  html_list.py  hyper_link.py  iframe.py  image.py  input.py  label.py  link.py  meta.py  noscript.py  option.py  output.py  paragraph.py  script.py  select.py  span.py  style.py  style_tag.py  svg.py  table.py  text_format.py  textarea.py  title.py
phtml/manipulation/: __init__.py  html_reader.py
phtml/operation/: match_html_class.py  parsers.py
phtml/utils/: utils.py
tests/: test_document.py  test_find_element.py  test_html_reader.py
tests/classes/: test_base.py  test_blockquote.py  test_button.py  test_canvas.py  test_comment.py  test_div.py  test_form.py  test_header.py  test_hyper_link.py  test_iframe.py  test_image.py  test_input.py  test_link.py  test_list.py  test_meta.py  test_noscript.py  test_paragraph.py  test_script.py  test_span.py  test_style.py  test_svg.py  test_table.py  test_text_format.py  test_title.py
tests/resources/: deleteme_real_world_html.html  deleteme_real_world_html2.html  document_actual_html_page.html  document_complex_objects.html  document_form.html  document_form2.html  document_form3.html  (+4 more)
