[project]
name = "phtml"
version = "0.4.0"
description = 'Manages an html file in python form'
authors = [
    {name = "Andrew Cobb", email = "aecobb53@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
repository = "https://github.com/aecobb53/phtml"
