[project]
name = "phtml"
version = "3.0.0"
description = 'Manages an html file in python form'
authors = [
    {name = "Andrew Cobb", email = "aecobb53@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/aecobb53/phtml"
